# VolkiRender

./: .env.cmake  .gitignore  CMakeLists.txt  SimpleRenderSystem.cpp  VulkiRender.sln  VulkiRender.vcxproj  VulkiRender.vcxproj.filters  Vulki_window.cpp  Vulki_window.h  compile.bat  first_app.cpp  first_app.h  input_manager.cpp  input_manager.hpp  simple_render_system.hpp  vulki_buffer.cpp  vulki_camera.cpp  vulki_descriptor.cpp  vulki_device.hpp  vulki_frame_info.hpp  vulki_game_object.hpp  vulki_model.cpp  vulki_model.h  vulki_pipeline.cpp  vulki_pipeline.h  vulki_renderer.hpp  vulki_swap_chain.cpp  vulki_swap_chain.hpp  vulki_utils.hpp
shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/: Vulki_window.h  first_app.cpp  main.cpp  vulki_buffer.hpp  vulki_camera.hpp  vulki_descriptors.hpp  vulki_device.cpp  vulki_device.hpp  vulki_game_object.cpp  vulki_model.cpp  vulki_pipeline.cpp  vulki_renderer.cpp  vulki_swap_chain.hpp  vulki_window.cpp
